--- a/29_DOMfoolery/index.html
+++ b/29_DOMfoolery/index.html
@@ -3,8 +3,8 @@
 <!--
     Team Frog Riders :: Matthew Yee, Vivian Graeber
     SoftDev pd7
-    K27 -- Basic functions in JavaScript
-    2023-04-17
+    K29 -- Manipulating the DOM
+    2023-04-24
     --------------------------------------------------
 -->
 
